exports[`no-namespace > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    },
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 4
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    },
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 4
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    },
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 4
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 21`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 22`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 23`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 24`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 2
        }
      }
    },
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 4
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-namespace > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-namespace",
      "messageId": "moduleSyntaxIsPreferred",
      "message": "ES2015 module syntax is preferred over namespaces.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
